cmake_minimum_required(VERSION 3.21)
project(a2 C)

set(CMAKE_C_STANDARD 11)

add_executable(a2
#        problems/1.c
#        problems/10.c
#        problems/11.c
#        problems/12.c
#        problems/13.c
#        problems/2.c
#        problems/3.c
#        problems/4.c
#        problems/5.c
#        problems/6.c
#        problems/7.c
#        problems/8.c
#        problems/9.c
        main.c
        )
